rs/idl-meta/tests/snapshots/serde__service_unit.snap
---
source: rs/idl-meta/tests/serde.rs
expression: serialized
---
{
  "name": "ThisThat",
  "funcs": [
    {
      "name": "DoThis",
      "params": [
        {
          "name": "p1",
          "type": "u32"
        },
        {
          "name": "p2",
          "type": "String"
        },
        {
          "name": "p3",
          "type": {
            "kind": "tuple",
            "types": [
              {
                "kind": "named",
                "name": "Option",
                "generics": [
                  "H160"
                ]
              },
              {
                "kind": "named",
                "name": "NonZero",
                "generics": [
                  "u8"
                ]
              }
            ]
          }
        },
        {
          "name": "p4",
          "type": {
            "kind": "named",
            "name": "TupleStruct"
          }
        }
      ],
      "output": {
        "kind": "tuple",
        "types": [
          "String",
          "u32"
        ]
      },
      "throws": {
        "kind": "tuple",
        "types": [
          "String"
        ]
      },
      "kind": "command",
      "entry_id": 0,
      "docs": [
        "Some func",
        "With multiline doc"
      ]
    }
  ],
  "types": [
    {
      "name": "DoThatParam",
      "kind": "struct",
      "fields": [
        {
          "name": "p1",
          "type": "u32",
          "docs": [
            "Parametr p1: u32"
          ]
        },
        {
          "name": "p2",
          "type": "ActorId"
        },
        {
          "name": "p3",
          "type": {
            "kind": "named",
            "name": "ManyVariants"
          }
        }
      ]
    },
    {
      "name": "ManyVariants",
      "kind": "enum",
      "variants": [
        {
          "name": "One",
          "fields": [],
          "entry_id": 0
        },
        {
          "name": "Two",
          "fields": [
            {
              "type": "u32"
            }
          ],
          "entry_id": 0
        },
        {
          "name": "Three",
          "fields": [
            {
              "type": {
                "kind": "named",
                "name": "Option",
                "generics": [
                  "u32"
                ]
              }
            }
          ],
          "entry_id": 0
        },
        {
          "name": "Four",
          "fields": [
            {
              "name": "a",
              "type": "u32"
            },
            {
              "name": "b",
              "type": {
                "kind": "named",
                "name": "Option",
                "generics": [
                  "u16"
                ]
              }
            }
          ],
          "entry_id": 0
        },
        {
          "name": "Five",
          "fields": [
            {
              "type": "String"
            },
            {
              "type": "H256",
              "annotations": [
                [
                  "key",
                  "value"
                ]
              ]
            }
          ],
          "entry_id": 0
        },
        {
          "name": "Six",
          "fields": [
            {
              "type": {
                "kind": "tuple",
                "types": [
                  "u32"
                ]
              }
            }
          ],
          "entry_id": 0
        }
      ]
    }
  ]
}
